# f_engine

./: .gitignore  Cargo.toml  Makefile  README.md
extensions/: README.md  index.js  package.json
src/: constants.rs  game_loop.rs  load_map.rs  main.rs  winit_loop.rs
src/actions/: player.rs
src/resources/maps/: inside1.tmx
src/resources/sprites/Heroes_01/: LICENSE
src/resources/tilesets/: house_interior.tsx
src/resources/tilesets/LPC_house_interior/: LICENSE
src/structs/: allegro_container.rs  animation_container.rs  color_container.rs  game_container.rs  player_container.rs
