[package]
name = "f_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
allegro = "0.0.46"
allegro_color = "0.0.46"
allegro_font = "0.0.46"
allegro_image = "0.0.46"
allegro_primitives = "0.0.46"
allegro_ttf = "0.0.46"
env_logger = "0.11.5"
pollster = "0.3.0"
tiled = "0.12.0"
wgpu = "22.1.0"
winit = "0.30.5"
